# vad-rs

./: Cargo.toml
